goodwillhunting2_sources = [
  'main.cpp',
  'FinalTreeMaker.cpp',
  'TreeMaker.cpp',
  'GenericTreeMaker.cpp',
  'ArrangementsTable.cpp',
  'TreeFile.cpp'
]

goodwillhunting2_deps = [
]

executable('goodwillhunting2', goodwillhunting2_sources,
  dependencies: goodwillhunting2_deps,
  install: true,
)

